unpackaged/main/default/objects/SDOC__SDJob__c/fields/SDOC__Account__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>S-Docs Jobs</relationshipLabel>
    <relationshipName>S_Docs_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>