unpackaged/main/default/objects/SDOC__SDJob__c/fields/SDOC__Aid__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Aid__c</fullName>
    <description>(Optional) A comma delimited list of SFDC attachment IDs (from Notes and Attachments) that will be included in any outbound email.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>(Optional) A comma delimited list of SFDC attachment IDs (from Notes and Attachments) that will be included in any outbound email.</inlineHelpText>
    <label>Incl. Attachments with Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>