unpackaged/main/default/objects/SDOC__SDJob__c/fields/SDOC__Apex_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Apex_Job_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Apex Job ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>