unpackaged/main/default/objects/SDOC__SDJob__c/fields/SDOC__Attempts__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Attempts__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Attempts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>