unpackaged/main/default/objects/SDOC__SDJob__c/fields/SDOC__Did__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Did__c</fullName>
    <description>(Optional) A comma delimited list of SFDC Document IDs (from Documents Tab) that will be included in any outbound email.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>(Optional) A comma delimited list of SFDC Document IDs (from Documents Tab) that will be included in any outbound email.</inlineHelpText>
    <label>Incl. Documents with Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>