unpackaged/main/default/objects/SDOC__SDJob__c/fields/SDOC__Email_From__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Email_From__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>