unpackaged/main/default/objects/SDOC__SDJob__c/fields/SDOC__Fid__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Fid__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Incl. Files with Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>