unpackaged/main/default/objects/SDOC__SDJob__c/fields/SDOC__Finish_Pending_Docs__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Finish_Pending_Docs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finish Pending Docs</label>
    <type>Checkbox</type>
</CustomField>