unpackaged/main/default/objects/SDOC__SDJob__c/fields/SDOC__Include_All_Related_Files__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Include_All_Related_Files__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the S-Doc Job will automatically attach all files related to the base record to the email.</inlineHelpText>
    <label>Include All Related Files</label>
    <type>Checkbox</type>
</CustomField>