unpackaged/main/default/objects/SDOC__SDJob__c/fields/SDOC__NetworkId__c.field-meta.xml
<CustomField>
    <fullName>SDOC__NetworkId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NetworkId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>