unpackaged/main/default/objects/SDOC__SDJob__c/fields/SDOC__Num_Partitions__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Num_Partitions__c</fullName>
    <label>Num Partitions</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>