unpackaged/main/default/objects/SDOC__SDJob__c/fields/SDOC__ObjApiName__c.field-meta.xml
<CustomField>
    <fullName>SDOC__ObjApiName__c</fullName>
    <description>API name should end with &quot;__c&quot; if a custom object. Ensure the Object ID provided matches the object Type in this field.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>API name should end with &quot;__c&quot; if a custom object. Ensure the Object ID provided matches the object Type in this field.</inlineHelpText>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>