unpackaged/main/default/objects/SDOC__SDJob__c/fields/SDOC__ObjSortValFieldsForSDoc__c.field-meta.xml
<CustomField>
    <fullName>SDOC__ObjSortValFieldsForSDoc__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ObjSortValFieldsForSDoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>