unpackaged/main/default/objects/SDOC__SDJob__c/fields/SDOC__ObjSortValNum__c.field-meta.xml
<CustomField>
    <fullName>SDOC__ObjSortValNum__c</fullName>
    <label>ObjSortValNum</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>