unpackaged/main/default/objects/SDOC__SDJob__c/fields/SDOC__Oid__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Oid__c</fullName>
    <description>15 or 18 Character SFDC ID of record</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>15 or 18 Character SFDC ID of record</inlineHelpText>
    <label>Object ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>