unpackaged/main/default/objects/SDOC__SDJob__c/fields/SDOC__Partition_Number__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Partition_Number__c</fullName>
    <label>Partition Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>