unpackaged/main/default/objects/SDOC__SDJob__c/fields/SDOC__Position_In_Batch__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Position_In_Batch__c</fullName>
    <label>Position In Batch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>