unpackaged/main/default/objects/SDOC__SDJob__c/fields/SDOC__RecordData2XML__c.field-meta.xml
<CustomField>
    <fullName>SDOC__RecordData2XML__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RecordData2XML</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>