unpackaged/main/default/objects/SDOC__SDJob__c/fields/SDOC__SDoc1__c.field-meta.xml
<CustomField>
    <fullName>SDOC__SDoc1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SDoc1</label>
    <referenceTo>SDOC__SDoc__c</referenceTo>
    <relationshipName>SDJobs</relationshipName>
    <type>Lookup</type>
</CustomField>