unpackaged/main/default/objects/SDOC__SDJob__c/fields/SDOC__SDoc1_View__c.field-meta.xml
<CustomField>
    <fullName>SDOC__SDoc1_View__c</fullName>
    <formula>IF (NOT(ISBLANK(SDOC__SDoc1__c)),
SDOC__SDoc1__r.SDOC__View_Link__c, &#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SDoc1 View</label>
    <type>Text</type>
</CustomField>