unpackaged/main/default/objects/SDOC__SDJob__c/fields/SDOC__SDoc2__c.field-meta.xml
<CustomField>
    <fullName>SDOC__SDoc2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SDoc2</label>
    <referenceTo>SDOC__SDoc__c</referenceTo>
    <relationshipName>SDJobs1</relationshipName>
    <type>Lookup</type>
</CustomField>