unpackaged/main/default/objects/SDOC__SDJob__c/fields/SDOC__SendEmail__c.field-meta.xml
<CustomField>
    <fullName>SDOC__SendEmail__c</fullName>
    <defaultValue>&quot;0&quot;</defaultValue>
    <description>&quot;0&quot; indicates no email will be sent. To auto-email the generated doc(s), set to &quot;1&quot;. 
&quot;Doclist&quot; must contain a Template ID with fomat set to &quot;HTML&quot; (this will become the email body) and must also set the &quot;to&quot; and &quot;subject&quot; fields for the outbound email.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>&quot;0&quot; indicates no email will be sent. To auto-email the generated doc(s), set to &quot;1&quot;. 
&quot;Doclist&quot; must contain a Template ID with fomat set to &quot;HTML&quot; (this will become the email body) and must also set the &quot;to&quot; and &quot;subject&quot; fields for the outbound email.</inlineHelpText>
    <label>Send Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>