unpackaged/main/default/objects/SDOC__SDJob__c/fields/SDOC__SSign_Envelope_ID__c.field-meta.xml
<CustomField>
    <fullName>SDOC__SSign_Envelope_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>S-Sign Envelope ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>