unpackaged/main/default/objects/SDOC__SDJob__c/fields/SDOC__Start__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Start__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Start Job</label>
    <type>Checkbox</type>
</CustomField>