unpackaged/main/default/objects/SDOC__SDJob__c/fields/SDOC__Status_Details__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Status_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Status Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>