unpackaged/main/default/objects/SDOC__SDJob__c/fields/SDOC__Status_Link__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Status_Link__c</fullName>
    <formula>IF (CONTAINS(SDOC__Status__c, &#39;Error&#39;),
  HYPERLINK(&#39;/&#39; + Id, IMAGE(&quot;/img/msg_icons/error16.png&quot;, &#39;&#39;) + SDOC__Status__c, &#39;_blank&#39;),
  IF (ISNUMBER(SDOC__Status__c),
    IMAGE(&#39;/img/samples/color_green.gif&#39;, &#39;&#39;, 7, value(SDOC__Status__c)/2) &amp; IMAGE(&#39;/img/s.gif&#39;, &#39;&#39;, 7, (50 - value(SDOC__Status__c))/2) &amp; &#39; &#39; &amp; SDOC__Status__c &amp; &#39;%&#39;,
    IF (SDOC__Status__c = &#39;Selected&#39;,
      IMAGE(&#39;/img/s.gif&#39;, &#39;&#39;, 7, 50) &amp; &#39; &#39; &amp; &#39;0%&#39;,
      IF (SDOC__Status__c = &#39;Completed&#39;,
        IMAGE(&#39;/img/samples/color_green.gif&#39;, &#39;&#39;, 7, 50) &amp; &#39; &#39;&amp; &#39;100%&#39; &amp; SDOC__SDoc1_View__c &amp; &#39; &#39; &amp; SDOC__SDoc2_View__c,
        SDOC__Status__c
      )
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Link</label>
    <type>Text</type>
</CustomField>