unpackaged/main/default/objects/SDOC__SDJob__c/listViews/SDOC__All.listView-meta.xml
<ListView>
    <fullName>SDOC__All</fullName>
    <columns>NAME</columns>
    <columns>SDOC__Type__c</columns>
    <columns>SDOC__ObjApiName__c</columns>
    <columns>SDOC__Status__c</columns>
    <columns>SDOC__Apex_Job_ID__c</columns>
    <columns>SDOC__Oid__c</columns>
    <columns>SDOC__RunAs__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>